--- a/cookbook/privacy/encrypted-transactions.mdx
+++ b/cookbook/privacy/encrypted-transactions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "BITE V1 - Simple Encrypted Transaction"
+title: "Encrypted Transactions"
 description: "Complete step-by-step guide to implementing private blockchain transactions using BITE threshold encryption"
 ---
 
