--- a/developers/bite-protocol/bite-api-and-faqs.mdx
+++ b/developers/bite-protocol/bite-api-and-faqs.mdx
@@ -5,11 +5,11 @@ description: "Technical documentation for BITE's JSON-RPC API methods and transa
 
 ## BITE API
 
-This section provides detailed technical documentation for BITE's JSON-RPC API methods, transaction structure, and common use cases.
+This section provides detailed technical documentation for BITE's APIs, both off-chain (TypeScript SDK) and on-chain (Solidity helpers).
 
-## Library API
+## Off-Chain API (bite-ts)
 
-The `@skalenetwork/bite` TypeScript library provides the following methods:
+The `@skalenetwork/bite` TypeScript library provides methods for encrypting data before submitting to the blockchain.
 
 ### `new BITE(endpoint: string)`
 
@@ -100,93 +100,97 @@ Fetches committee information using `bite_getCommitteesInfo` JSON-RPC method.
 
 ---
 
-## Underlying JSON-RPC Methods
+## On-Chain API (bite-solidity)
 
-The library wraps these JSON-RPC methods (usually called indirectly through the library):
+The `@skalenetwork/bite-solidity` library provides Solidity helpers for creating Conditional Transactions (CTX) that request decryption from within smart contracts.
 
-### `bite_getDecryptedTransactionData`
+### Installation
 
-Retrieves decrypted transaction data for a BITE transaction after consensus finality.
+```bash
+# npm
+npm i @skalenetwork/bite-solidity
+
+# forge
+forge install skalenetwork/bite-solidity
+echo "@skalenetwork/bite-solidity/=lib/bite-solidity/" >> remappings.txt
+```
+
+<Warning>
+**Compiler Requirements**
+- Solidity version: **>= 0.8.27**
+- EVM version: **istanbul** or lower
+</Warning>
+
+### Import
+
+```solidity
+import { BITE } from "@skalenetwork/bite-solidity/BITE.sol";
+import { IBiteSupplicant } from "@skalenetwork/bite-solidity/interfaces/IBiteSupplicant.sol";
+```
+
+### `BITE.submitCTX(address, gasLimit, encryptedArgs, plaintextArgs)`
+
+Creates a Conditional Transaction for decryption.
 
 **Parameters:**
-- `transactionHash: string` – The hash of the BITE transaction
+- `address`: CTX handler address (use `BITE.SUBMIT_CTX_ADDRESS`)
+- `gasLimit`: Gas for callback (in gas units, e.g., `msg.value / tx.gasprice`)
+- `encryptedArgs`: Array of encrypted bytes to decrypt
+- `plaintextArgs`: Array of unencrypted bytes to pass through
 
-**Returns:**
-- `object` – Contains `to` and `data` fields with original decrypted values
+**Returns:** `address` – The CTX supplicant address that will call `onDecrypt()`
 
-**Example Request:**
-```json
-{
-  "jsonrpc": "2.0",
-  "method": "bite_getDecryptedTransactionData",
-  "params": ["0x1234567890abcdef1234567890abcdef12345678"],
-  "id": 1
-}
-```
+---
 
-**Example Response:**
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "result": {
-    "to": "0x742d35Cc6634C0532925a3b844Bc454e4438f44e",
-    "data": "0xa9059cbb0000000000000000000000008ba1f109551b4d4a11d4a9b3d5c5b0c8e4b5b9d50000000000000000000000000000000000000000000000000000000000000000a"
-  }
-}
-```
+### `IBiteSupplicant.onDecrypt(decryptedArgs, plaintextArgs)`
 
-### `bite_getCommitteesInfo`
-
-Fetches current committee information including BLS public keys and epoch details.
+Callback that your contract must implement. Called by SKALE consensus with decrypted data.
 
 **Parameters:**
-- None
+- `decryptedArgs`: Array of decrypted byte arrays
+- `plaintextArgs`: Array of plaintext byte arrays (passed through)
 
-**Returns:**
-- `array` – Array of committee objects (1-2 elements)
+**Example:**
 
-**Example Request:**
-```json
-{
-  "jsonrpc": "2.0",
-  "method": "bite_getCommitteesInfo",
-  "params": [],
-  "id": 1
-}
-```
+```solidity
+pragma solidity >=0.8.27;
 
-**Example Response (Single Committee):**
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "result": [
-    {
-      "commonBLSPublicKey": "0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef",
-      "epochId": 12345
+import { BITE } from "@skalenetwork/bite-solidity/BITE.sol";
+import { IBiteSupplicant } from "@skalenetwork/bite-solidity/interfaces/IBiteSupplicant.sol";
+import { Address } from "@openzeppelin/contracts/utils/Address.sol";
+
+contract MyContract is IBiteSupplicant {
+    using Address for address payable;
+
+    address public ctxSender;
+
+    function revealSecret(bytes calldata encrypted) external payable {
+        bytes[] memory encryptedArgs = new bytes[](1);
+        encryptedArgs[0] = encrypted;
+
+        bytes[] memory plaintextArgs = new bytes[](0);
+
+        ctxSender = BITE.submitCTX(
+            BITE.SUBMIT_CTX_ADDRESS,
+            msg.value / tx.gasprice,
+            encryptedArgs,
+            plaintextArgs
+        );
+
+        payable(ctxSender).sendValue(msg.value);
     }
-  ]
+
+    function onDecrypt(
+        bytes[] calldata decryptedArgs,
+        bytes[] calldata
+    ) external override {
+        require(msg.sender == ctxSender, "Unauthorized");
+        // Handle decrypted data
+    }
 }
 ```
 
-**Example Response (During Rotation):**
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "result": [
-    {
-      "commonBLSPublicKey": "0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef",
-      "epochId": 12345
-    },
-    {
-      "commonBLSPublicKey": "0xfedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321fedcba0987654321",
-      "epochId": 12346
-    }
-  ]
-}
-```
+---
 
 ## Transaction Structure
 
@@ -218,6 +222,8 @@ The encrypted `data` field contains RLP-encoded array:
 
 > **Important: Gas Limit Requirement**
 > When passing a transaction to `bite.ts`, you must set `gasLimit` manually. `estimateGas` does not return proper values for encrypted transactions. If `gasLimit` is omitted, `bite.ts` will automatically set it to **300000**.
+
+---
 
 ## Common Use Cases
 
