--- a/get-started/hackathon/info.mdx
+++ b/get-started/hackathon/info.mdx
@@ -34,6 +34,20 @@ You can also built on **SKALE Base Sepolia Testnet** if you are looking for acce
 
 ---
 
+## FAQ & Important Developer Information
+
+**Q: Why is my contract failing to deploy/Out of Gas?**
+
+Solidity contracts should be compiled and deployed with version Shanghai or lower on SKALE Base.
+
+<Note>
+If you are using SKALE's BITE Sandbox for the hackathon, deploy contracts with EVM Version Istanbul.
+</Note>
+
+**Q: Need to add SKALE to your Wallet?**
+
+Go [here](https://base-sepolia.skalenodes.com/chains/bite-v2-sandbox) for the SKALE BITE Sandbox chain or [here](https://base-sepolia.skalenodes.com/chains/base-testnet) for SKALE's long running SKALE Base Sepolia testnet. Connect your wallet and then click "Connect to Chain" and it will automatically add the chain to your wallet for you.
+
 ## Resources
 
 | Resource | What It Does | Link |
