Add RelAi to docs

--- a/get-started/agentic-builders/facilitators.mdx
+++ b/get-started/agentic-builders/facilitators.mdx
@@ -9,11 +9,12 @@ On SKALE, facilitators support both SKALE Base (Mainnet) and SKALE Base Sepolia 
 
 ## Available Facilitators
 
-| Name | Endpoint | Cookbook Demo |
-|-----------------|---------------------|---------------|
-| Kobaru | https://gateway.kobaru.io | [Kobaru Demo](/cookbook/facilitators/using-kobaru) |
-| PayAI | https://facilitator.payai.network | [PayAI Demo](/cookbook/facilitators/using-payai) |
-| x402x | https://facilitator.x402x.dev/ | [x402x Demo](/cookbook/facilitators/using-x402x) |
+| Name | Endpoint | Cookbook Demo | BITE Support|
+|-----------------|---------------------|---------------|---------------|
+| RelAI | https://facilitator.x402.fi  | [RelAI Demo](/cookbook/facilitators/using-relai) | BITE V1 |
+| Kobaru | https://gateway.kobaru.io | [Kobaru Demo](/cookbook/facilitators/using-kobaru) | - |
+| PayAI | https://facilitator.payai.network | [PayAI Demo](/cookbook/facilitators/using-payai) | - |
+| x402x | https://facilitator.x402x.dev/ | [x402x Demo](/cookbook/facilitators/using-x402x) | - |
 
 <Note>
 Does your facilitator support SKALE? Submit a PR at https://github.com/skalenetwork/docs.skale.space and add your facilitator!
